minor refactor, and add new step

--- a/makethisbotbot/src/main/resources/l18n/message_en.properties
+++ b/makethisbotbot/src/main/resources/l18n/message_en.properties
@@ -1,5 +1,9 @@
-welcome.message=Hi new user, maybe you want have the best bot in the world?????
+welcome.message=Hi new user, seems you want to have the best bot in the world????? Please enter your name.
 enter.name.prompt=Enter your name
 enter.name.unsuccess=It's look like a joke. Try again
 enter.email.prompt=Enter Email
 enter.email.unsuccess=Try again
+enter.phone.prompt=Please enter your phone
+enter.phone.unsuccess=Try again
+enter.order.describe.prompt=Can you write short describe of your bot
+enter.order.describe.unsuccess=It's look like a joke. Try again
