refactor to add ability add step with keybord

--- a/makethisbotbot/src/main/resources/l18n/message_en.properties
+++ b/makethisbotbot/src/main/resources/l18n/message_en.properties
@@ -7,3 +7,4 @@ enter.phone.prompt=Please enter your phone
 enter.phone.unsuccess=Try again
 enter.order.describe.prompt=Can you write short describe of your bot
 enter.order.describe.unsuccess=It's look like a joke. Try again
+test=test
