--- a/makethisbotbot/src/main/resources/l18n/message_en.properties
+++ b/makethisbotbot/src/main/resources/l18n/message_en.properties
@@ -7,4 +7,12 @@ enter.phone.prompt=Please enter your phone
 enter.phone.unsuccess=Try again
 enter.order.describe.prompt=Can you write short describe of your bot
 enter.order.describe.unsuccess=It's look like a joke. Try again
-test=test
+enter.order.type.prompt=Here you can see the types. Please, choose one that the best suite to your bot. For help use command /help_order_type
+enter.order.type.unsuccess=Please, use the only types, that located below 
+type.order.bussines=Business
+type.order.game=Game
+type.order.fun=Fun
+type.order.oganizer=Organizer
+##
+command.help.order.type=bussines - for bussines goal\u000agame - text game\u000afun - telegram bot for fun
+
