added localization to menu

--- a/makethisbotbot/src/main/resources/l18n/message_en.properties
+++ b/makethisbotbot/src/main/resources/l18n/message_en.properties
@@ -16,4 +16,15 @@ enter.order.type.organizer=Organizer
 ##
 command.help.order.type=bussines - for bussines goal\u000agame - text game\u000afun - telegram bot for fun
 enter.order.type.default=Enother
+menu.root=Root menu choosen \u0B27.
+menu.root.button=Root menu
+menu.faq=Please choose frequent ask question which you interesting about.
+menu.faq.button=FAQ
+menu.faq.question1.button=What is Telegram?
+menu.faq.question1=Telegram is a free cross-platform messenger for smartphones and other devices that allows you to exchange text messages and multimedia files.
+menu.change.data.button=Change contact data
+menu.change.data=Please, chouse what you want to change
+menu.show.order.status.button=Order status
+menu.back.button=Back
+menu.error=I don't understand your language\ud83d\ude1e, Please\ud83d\ude4f use existing buttons.
 
