--- a/makethisbotbot/src/main/resources/l18n/message_en.properties
+++ b/makethisbotbot/src/main/resources/l18n/message_en.properties
@@ -27,4 +27,6 @@ menu.change.data=Please, chouse what you want to change
 menu.show.order.status.button=Order status
 menu.back.button=Back
 menu.error=I don't understand your language\ud83d\ude1e, Please\ud83d\ude4f use existing buttons.
+menu.faq.question2=What is Telegram?
+menu.faq.question2.button=How many people use it?
 
