--- a/makethisbotbot/src/main/resources/l18n/message_en.properties
+++ b/makethisbotbot/src/main/resources/l18n/message_en.properties
@@ -29,4 +29,10 @@ menu.back.button=Back
 menu.error=I don't understand your language\ud83d\ude1e, Please\ud83d\ude4f use existing buttons.
 menu.faq.question2=What is Telegram?
 menu.faq.question2.button=How many people use it?
+status.message=Currently your order in status:
+status.canceled=Canceled
+status.queue=Queue
+status.assessment=Àssessment
+status.customer.review=Ñustomer review
+status.done=Done
 
