added date step

--- a/makethisbotbot/src/main/resources/l18n/message_en.properties
+++ b/makethisbotbot/src/main/resources/l18n/message_en.properties
@@ -1,11 +1,11 @@
 welcome.message=Hi new user, seems you want to have the best bot in the world????? Please enter your name.
-enter.name.prompt=Enter your name
-enter.name.unsuccess=It's look like a joke. Try again
-enter.email.prompt=Enter Email
-enter.email.unsuccess=Try again
-enter.phone.prompt=Please enter your phone
-enter.phone.unsuccess=Try again
-enter.order.describe.prompt=Can you write short describe of your bot
+enter.name.prompt=Enter your name, please!!!!!
+enter.name.unsuccess=Sorry ?, data not valid, try again.
+enter.email.prompt=Enter Email, please ?!!!!!
+enter.email.unsuccess=Sorry ?, data not valid, try again.
+enter.phone.prompt=Please enter your phone ?
+enter.phone.unsuccess=Sorry ?, data not valid, try again.
+enter.order.describe.prompt=Can you write short describe of your bot???
 enter.order.describe.unsuccess=It's look like a joke. Try again
 enter.order.type.prompt=Here you can see the types. Please, choose one that the best suite to your bot. For help use command /help_order_type
 enter.order.type.unsuccess=Please, use the only types, that located below
@@ -16,7 +16,7 @@ enter.order.type.organizer=Organizer
 ##
 command.help.order.type=bussines - for bussines goal\u000agame - text game\u000afun - telegram bot for fun
 enter.order.type.default=Enother
-menu.root=Root menu choosen \u0B27.
+menu.root=Root menu choosen ?.
 menu.root.button=Root menu
 menu.faq=Please choose frequent ask question which you interesting about.
 menu.faq.button=FAQ
@@ -35,4 +35,16 @@ status.queue=Queue
 status.assessment=Àssessment
 status.customer.review=Ñustomer review
 status.done=Done
-
+menu.change.data.name=Name
+menu.change.data.phone=Phone
+menu.change.data.email=Email
+menu.change.data.prompt=Please enter new:
+menu.change.data.successful=DData was changed saved
+menu.show.user.data=Show user data
+menu.show.user.data.name=Name:
+menu.show.user.data.phone=\nPhone:
+menu.show.user.data.email=\nEmail:
+enter.order.due.date.prompt=Please enter due date to your order ?
+enter.order.due.date.unsuccess=Please enter correct date format(dd/mm/yyyy, dd,mmm,yyyy, dd:mm:yyyy). Also be aware that date should be at least after 3 days of the current date
+menu.show.user.data.due.date=\nDue date:
+menu.change.data.due.date=Due date
